--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,12 +4,12 @@
     <p>I write software. Occasionally, I will compose a post for this blog.</p>
     <div class="external-links">
       <p>
-        <span class="context">sourcehut</span>
-        <a href="https://git.sr.ht/~sircmpwn">~sircmpwn</a>
+        <span class="context">twitter</span>
+        <a href="https://twitter.com/derykmakgill">~@derykmakgill</a>
       </p>
       <p>
-        <span class="context">mastodon</span>
-        <a href="https://cmpwn.com/@sir">@sir@cmpwn.com</a>
+        <span class="context">github</span>
+        <a href="https://github.com/makgill">makgill</a>
       </p>
       <p>
         <span class="context">email</span>
