--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,3 +4,24 @@
   {{ content }}
   
   </article>
+
+<p class="text-muted">
+  Have a comment on one of my posts? Start a discussion in my
+  <a href="https://lists.sr.ht/~sircmpwn/public-inbox">public inbox</a>
+  by sending an email to
+  <a href="mailto:~sircmpwn/public-inbox@lists.sr.ht?Subject=Re%3A%20{{ page.title | uri_escape }}">
+    ~sircmpwn/public-inbox@lists.sr.ht
+  </a>
+  <small style="padding-left: 2px">
+    [<a href="https://man.sr.ht/lists.sr.ht/etiquette.md">mailing list etiquette</a>]
+  </small>
+</p>
+
+<p class="text-muted">
+  Are you a free software maintainer who is struggling with stress, demanding
+  users, overwork, or any other social problems in the course of your work?
+  Please <a href="mailto:sir@cmpwn.com">email me</a> &mdash; I know how you
+  feel, and I can lend a sympathetic ear and share some veteran advice.
+</p>
+
+<hr />
