--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,11 +5,15 @@
     <div class="external-links">
       <p>
         <span class="context">twitter</span>
-        <a href="https://twitter.com/derykmakgill">~@derykmakgill</a>
+        <a href="https://twitter.com/derykmakgill">@derykmakgill</a>
       </p>
       <p>
         <span class="context">github</span>
         <a href="https://github.com/makgill">makgill</a>
+      </p>
+         <p>
+        <span class="context">reddit</span>
+        <a href="https://reddit.com/user/mkgll">mkgll</a>
       </p>
       <p>
         <span class="context">email</span>
