--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,7 +17,7 @@
       </p>
       <p>
         <span class="context">email</span>
-        <a href="mailto:sir@cmpwn.com">sir@cmpwn.com</a>
+        <a href="mailto:hello@mkgll.ch">hello@mkgll.ch</a>
       </p>
       <p>
         <span class="context">pgp</span>
