--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
     <hr class="visible-xs" />
     <img class="avatar" src="https://drewdevault.com/avatar-148.jpg" alt="Drew DeVault's avatar" />
-    <p>I write software. Occasionally, I will compose a post for this blog.</p>
+    <p>I write software. Occasionally, I will compose a post for this blog.   <a href="/about">More.</a></p>
     <div class="external-links">
       <p>
         <span class="context">twitter</span>
