--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,6 @@
 <div class="sidebar">
     <hr class="visible-xs" />
-    <img class="avatar" src="https://drewdevault.com/avatar-148.jpg" alt="Drew DeVault's avatar" />
+    <img class="avatar" src="https://pbs.twimg.com/profile_images/1268341146885009416/-Bq10JV__400x400.jpg" alt="Drew DeVault's avatar" />
     <p>I write software. Occasionally, I will compose a post for this blog.   <a href="/about">More.</a></p>
     <div class="external-links">
       <p>
