--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,17 @@ layout: default
     </p>
     {% endif %}
 
+     {% if page.image %}
+      <div class="post-image">
+        <a href="{{ page.url | relative_url }}" style="
+    text-decoration: none;
+">
+          <img src="{{ page.image | relative_url }}" alt="{{ page.alt }}">
+          
+        </a>
+       </div>  
+      {% endif %}  
+
 <article>
 
 
