--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,12 @@
 layout: default
 ---
 
+ {%- if page.title -%}
+    <h1 class="page-title"> <a class="rss pull-right" href="/feed.xml"><i class="fa fa-rss"></i></a>
+      
+      {{ page.title }}</h1>
+  {%- endif -%}
+
  {% if page.url != '/' %}
     <p class="date">
         {% if page.date %}Published {{ page.date | date: "%Y-%m-%d" }}{% endif %}
