--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -35,6 +35,17 @@
     {% endfor %}
     {% endif %}
     
+      {% if page.url != '/' %}
+    <h3>Recent Notes</h3>
+    {% assign notes = site.notes | sort: 'date' | reverse %}
+{% for notes in notes limit:4  %}
+   <div class="post-stub">
+      <a href="{{ notes.url | prepend: site.baseurl }}">{{ notes.date }}</a>
+  </div>
+{% endfor %}
+      {% endif %}
+
+    
     <h3>Consulting</h3>
     <p>
       <a href="https://sourcehut.org/consultancy/">Click here</a> to learn
