--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -5,7 +5,7 @@ layout: default
 
 <article>
     {% if page.reply %}
- <span class="reply-context" style="display:block;background-color: #f5f5f5;text-indent: 1em;">↳ In reply to <a href="{{ notes.reply | relative_url }}" class="u-in-reply-to h-cite">{{ page.reply }}</a></span>
+ <span class="reply-context" style="display:block;background-color: #f5f5f5;text-indent: 1em;">↳ In reply to <a href="{{ page.reply | relative_url }}" class="u-in-reply-to h-cite">{{ page.reply }}</a></span>
   {% endif %}
  
 
