--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -35,6 +35,48 @@ layout: default
         </span>
     </p>
     {% endif %}
+    
+    {% comment %} 
+  Previous / Next functions
+  Assign variables from the entire portfolio collection
+{% endcomment %}
+{% assign items_raw = site.notes | where: 'type', page.type %}
+{% assign items = items_raw | sort: 'year' | reverse %}
+
+{% if items.size > 1 %}
+  {% comment %}
+    Store the index position of the matching items
+  {% endcomment %}
+  {% for item in items %}
+    {% if item.title == page.title %}
+      {% assign item_index = forloop.index %}
+    {% endif %}
+  {% endfor %}
+  
+  {% assign prev_index = item_index | plus: 1 %}
+  {% assign next_index = item_index | minus: 1 %}
+  
+  {% for item in items %}
+    {% if forloop.index == prev_index %}
+      {% assign prev = item %}
+    {% endif %}
+    {% if forloop.index == next_index %}
+      {% assign next = item %}
+    {% endif %}
+  {% endfor %}
+
+  <p>
+    {% if prev %}
+      <a href="{{ prev.url }}" class="prev" title="{{ prev.date }}">&lt; Older</a>
+    {% endif %}
+    {% if prev and next %}
+      <span> | </span>
+    {% endif %}
+    {% if next %}
+      <a href="{{ next.url }}" class="next" title="{{ next.date }}">Newer &gt;</a>
+    {% endif %}
+  </p>
+{% endif %}
 
   
   </article>
