--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -61,7 +61,7 @@
   
      <h1 class="page-title">
     <a class="rss pull-right" href="/feed.xml"><i class="fa fa-rss"></i></a>
-   Deryk Makgill's Website
+   Home
 </h1>
 
 {{ content }}
