--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,11 @@
   {%- include head.html -%}
 
   <body>
+    
+    <h1 class="page-title">
+    <a class="rss pull-right" href="/feed.xml"><i class="fa fa-rss"></i></a>
+   Deryk Makgill's Website
+</h1>
 <ul style="
     list-style-type: none;
     margin: 0;
