--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@
   {%- include head.html -%}
 
   <body>
-    <h1 class="page-title">
+    <h1 class="page-title" style="margin-top:0px;">
     <a class="rss pull-right" href="/feed.xml"><i class="fa fa-rss"></i></a>
    Deryk Makgill's Website
 </h1>
