--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 
   <body>
     
-    <h1 class="page-title">
+    <h1 class="page-title" style="margin-top:0px;">
     <a class="rss pull-right" href="/feed.xml"><i class="fa fa-rss"></i></a>
    Deryk Makgill's Website
 </h1>
