--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,10 +4,6 @@
   {%- include head.html -%}
 
   <body>
-    <h1 class="page-title" style="margin-top:0px;">
-    <a class="rss pull-right" href="/feed.xml"><i class="fa fa-rss"></i></a>
-   Deryk Makgill's Website
-</h1>
   
     <ul style="
     list-style-type: none;
@@ -65,7 +61,7 @@
   
      <h1 class="page-title">
     <a class="rss pull-right" href="/feed.xml"><i class="fa fa-rss"></i></a>
-   Home
+  Deryk Makgill's Blog
 </h1>
 
 {{ content }}
