--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -22,6 +22,10 @@
 
     </div>
     
+    <div class="welovecodinghorror" style="margin-bottom:15px;background: #feffeb;padding: 10p;"> 
+[ad] Enjoy the blog? Read <b><a href="https://www.amazon.com/dp/B008HUMTO0/?tag=codihorr-20">Effective Programming: More than Writing Code</a></b> and <b><a href="https://www.amazon.com/dp/B00BU3KPQU/?tag=codihorr-20">How to Stop Sucking and Be Awesome Instead</a></b>  on your Kindle, iPad, Nook, or as a PDF.
+</div>
+    
      {% if page.url != '/' %}
     <h3>Recent Posts</h3>
     {% for post in site.posts limit: 3 %}
