--- a/_includes/post-stub.html
+++ b/_includes/post-stub.html
@@ -4,12 +4,7 @@
         {{ include.post.date | date: "%Y-%m-%d" }}
       </span>
       <span class="title">
-        {% if include.post._url %}
-        <a href="{{ include.post._url | relative_url }}" target="_blank">
-          {{ include.post.title }}
-          <i class="fa fa-external-link"></i>
-        </a>
-        {% else %}
+          {% if post.title %}
         <a href="{{ include.post.url | relative_url }}">{{ include.post.title }}</a>
         {% endif %}
       </span>
