--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
     display: inline;
     /* margin-left: 5px; */
     margin-right: 5px;
-"><a href="{{ site.url | relative_url }}" style="
+"><a href="{{ '/' | relative_url }}" style="
     color: #444;
 ">Home</a></li>
   <li style="
