--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,7 +14,7 @@
     display: inline;
     margin-left: 5px;
     margin-right: 5px;
-"><a href="/news/all" style="
+"><a href="{{ '/blog' | relative_url }}" style="
     color: #444;
 ">Posts</a></li>
 
@@ -22,25 +22,25 @@
     display: inline;
     margin-left: 5px;
     margin-right: 5px;
-"><a href="contact" style="
+"><a href="{{ '/notes' | relative_url }}" style="
     color: #444;
 ">Notes</a></li><li style="
     display: inline;
     margin-left: 5px;
     margin-right: 5px;
-"><a href="contact" style="
+"><a href="{{ '/links' | relative_url }}" style="
     color: #444;
 ">Links</a></li><li style="
     display: inline;
     margin-left: 5px;
     margin-right: 5px;
-"><a href="contact" style="
+"><a href="{{ '/photos' | relative_url }}" style="
     color: #444;
 ">Photos</a></li><li style="
     display: inline;
     margin-left: 5px;
     margin-right: 5px;
-"><a href="contact" style="
+"><a href="{{ '/contact' | relative_url }}" style="
     color: #444;
 ">Contact</a></li>
   </ul>
