--- a/_includes/post-stub.html
+++ b/_includes/post-stub.html
@@ -1,20 +1,16 @@
-{% assign documents = site.documents | sort: 'date' | reverse %}
-
-{% for document in documents limit:200 %}
 <div class="post-stub">
-       <h2>
-      <span class="date hidden-xs">{{ document.date | date: "%Y-%m-%d" }}    </span>
-             {% if document.layout == "post" %} <span class="title">   <a href="{{ document.url | relative_url }}">{{ document.title}} </a>
-         </span>{% else %} <span class="title">   <a href="{{ document.url | relative_url }}">{{ document.date | date: "%H:%M:%S" }}   </a>
-         </span>  {% endif %}
-       
-       
-       </h2>
-         {% if document.reply %}
- <p><span class="reply-context" style="display:block;background-color: #f5f5f5;text-indent: 1em; line-break:anywhere;">↳ In reply to <a href="{{ document.reply | relative_url }}" class="u-in-reply-to h-cite">{{ document.reply }}</a></span></p>
-  {% endif %}
-  
-
-{{ document.excerpt }}
- </div> 
-{% endfor %}
+    <h2>
+      <span class="date hidden-xs">
+        {{ include.post.date | date: "%Y-%m-%d" }}
+      </span>
+      <span class="title">
+          {% if post.title %}
+        <a href="{{ include.post.url | relative_url }}">{{ include.post.title }}</a>
+        {% endif %}
+      </span>
+    </h2>
+    {% if include.post._url or include.no_excerpt %}
+    {% else %}
+    {{ include.post.excerpt }}
+    {% endif %}
+</div>
