--- a/_includes/stream-stub.html
+++ b/_includes/stream-stub.html
@@ -17,8 +17,14 @@
          {% if document.reply %}
  <p><span class="reply-context" style="display:block;background-color: #f5f5f5;text-indent: 1em; line-break:anywhere;">↳ In reply to <a href="{{ document.reply | relative_url }}" class="u-in-reply-to h-cite">{{ document.reply }}</a></span></p>
   {% endif %}
-  
-
-{{ document.excerpt }}
+       
+     {% if document.layout == "post" %}  {{ document.excerpt  }}      
+       {% else %}
+       
+        <p class="p-content"> 
+   {{ document.content | truncate: 445 }}
+ </p>
+         {% endif %}
+       
  </div> 
 {% endfor %}
