--- a/_includes/stream-stub.html
+++ b/_includes/stream-stub.html
@@ -18,6 +18,17 @@
  <p><span class="reply-context" style="display:block;background-color: #f5f5f5;text-indent: 1em; line-break:anywhere;">↳ In reply to <a href="{{ document.reply | relative_url }}" class="u-in-reply-to h-cite">{{ document.reply }}</a></span></p>
   {% endif %}
        
+       {% if document.image %}
+      <div class="post-image">
+        <a href="{{ document.url | relative_url }}" style="
+    text-decoration: none;
+">
+          <img src="{{ document.image | relative_url }}" alt="{{ document.alt }}">
+          
+        </a>
+       </div>  
+      {% endif %}  
+       
      {% if document.layout == "post" %}  {{ document.excerpt  }}      
        {% else %}
        
