--- a/_includes/stream-stub.html
+++ b/_includes/stream-stub.html
@@ -18,7 +18,15 @@
  <p><span class="reply-context" style="display:block;background-color: #f5f5f5;text-indent: 1em; line-break:anywhere;">↳ In reply to <a href="{{ document.reply | relative_url }}" class="u-in-reply-to h-cite">{{ document.reply }}</a></span></p>
   {% endif %}
        
-       {% if document.image %}
+       {% if document.layout == "post" %}   <p class="p-content"> {{ document.excerpt  }} </p>     
+       {% else %}
+       
+        <p class="p-content"> 
+   {{ document.content | truncate: 445 }}
+ </p>
+         {% endif %}
+       
+    {% if document.image %}
       <div class="post-image">
         <a href="{{ document.url | relative_url }}" style="
     text-decoration: none;
@@ -27,15 +35,7 @@
           
         </a>
        </div>  
-      {% endif %}  
-       
-     {% if document.layout == "post" %}  {{ document.excerpt  }}      
-       {% else %}
-       
-        <p class="p-content"> 
-   {{ document.content | truncate: 445 }}
- </p>
-         {% endif %}
+      {% endif %}       
        
  </div> 
 {% endfor %}
