--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,6 @@
 <div class="sidebar">
     <hr class="visible-xs" />
-    <img class="avatar" src="assets/img/mkgll_avatar_2019-03-07.jpg" alt="Mkgll avatar" />
+    <img class="avatar" src="https://derykmakgill.github.io/drw/assets/img/mkgll_avatar_2019-03-07.jpg" alt="Mkgll avatar" />
     <p>I write software. Occasionally, I will compose a post for this blog.   <a href="/about">More.</a></p>
     <div class="external-links">
       <p>
