--- a/_includes/stream-stub.html
+++ b/_includes/stream-stub.html
@@ -31,7 +31,7 @@
         <a href="{{ document.url | relative_url }}" style="
     text-decoration: none;
 ">
-          <img src="{{ document.image | relative_url }}" alt="{{ document.alt }}">
+          <img src="{{ document.image | relative_url }}" alt="{{ document.alt }}" style="max-width:60%">
           
         </a>
        </div>  
