--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -16,7 +16,7 @@
     margin-right: 5px;
 "><a href="{{ '/blog' | relative_url }}" style="
     color: #444;
-">Posts</a></li>
+">Articles</a></li>
 
   <li style="
     display: inline;
