--- a/_includes/micro-stub.html
+++ b/_includes/micro-stub.html
@@ -2,7 +2,6 @@
 {% assign documents = site.documents | sort: 'date' | reverse %}
 
 {% for document in documents limit:200 %}
-{% if document.layout =! "post" %}
 <div class="post-stub">
        <h2>
       <span class="date hidden-xs">{{ document.date | date: "%Y-%m-%d" }}    </span>
@@ -36,7 +35,7 @@
           
         </a>
        </div>  
-       {% endif %}   {% endif %}       
+       {% endif %}         
        
  </div> 
 {% endfor %}
