--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -22,21 +22,9 @@
     display: inline;
     margin-left: 5px;
     margin-right: 5px;
-"><a href="{{ '/notes' | relative_url }}" style="
+"><a href="{{ '/microblog' | relative_url }}" style="
     color: #444;
-">Notes</a></li><li style="
-    display: inline;
-    margin-left: 5px;
-    margin-right: 5px;
-"><a href="{{ '/links' | relative_url }}" style="
-    color: #444;
-">Links</a></li><li style="
-    display: inline;
-    margin-left: 5px;
-    margin-right: 5px;
-"><a href="{{ '/photos' | relative_url }}" style="
-    color: #444;
-">Photos</a></li><li style="
+">Microblog</a></li><li style="
     display: inline;
     margin-left: 5px;
     margin-right: 5px;
