--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -29,7 +29,7 @@
      {% if page.url != '/' %}
     <h3>Recent Posts</h3>
     {% for post in site.posts limit: 3 %}
-    <div class="post-stub">
+    <div class="post-sidebar">
       {{ post.date | date: "%Y-%m-%d" }}<br />
       <a href="{{ post.url }}">{{ post.title }}</a>
     </div>
@@ -40,7 +40,7 @@
     <h3>Recent Notes</h3>
     {% assign notes = site.notes | sort: 'date' | reverse %}
 {% for notes in notes limit:4  %}
-   <div class="post-stub">
+   <div class="post-sidebar">
       <a href="{{ notes.url | prepend: site.baseurl }}">{{ notes.date }}</a>
   </div>
 {% endfor %}
