--- a/_layouts/reply.html
+++ b/_layouts/reply.html
@@ -8,6 +8,9 @@ layout: default
  <p><span class="reply-context" style="display:block;background-color: #f5f5f5;text-indent: 1em;">↳ In reply to <a href="{{ page.reply | relative_url }}" class="u-in-reply-to h-cite">{{ page.reply }}</a></span></p>
   {% endif %}
  
+    {% if page.blockquote %}
+ <blockquote class="reply-quote">{{ page.blockquote }}</blockquote
+  {% endif %}
 
 
   {{ content }}
