--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,6 +8,20 @@ layout: default
       {{ page.title }}</h1>
   {%- endif -%}
 
+{% if page.date %}
+    <p class="date">
+       Updated {{ page.date | date: "%Y-%m-%d" }}
+        on <a href="/">Deryk Makgill's website</a>
+        <span class="hidden-xs">
+          &mdash;
+          <a href="{{ page.url }}">
+            Permalink
+          </a>
+        </span>
+    </p>
+    {% endif %}
+
+
 <article>
 
 
