--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,7 +11,7 @@ layout: default
 {% if page.date %}
     <p class="date">
        Updated {{ page.date | date: "%Y-%m-%d" }}
-        on <a href="/">Deryk Makgill's website</a>
+        on <a href="/">mkgll.com</a>
         <span class="hidden-xs">
           &mdash;
           <a href="{{ page.url }}">
