--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,7 @@
       </p>
       <p>
         <span class="context">github</span>
-        <a href="https://github.com/makgill">makgill</a>
+        <a href="https://github.com/mkgll">mkgll</a>
       </p>
          <p>
         <span class="context">reddit</span>
