--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,7 +5,7 @@
     <div class="external-links">
       <p>
         <span class="context">twitter</span>
-        <a href="https://twitter.com/derykmakgill">@derykmakgill</a>
+        <a href="https://twitter.com/dmkgll">@dmkgll</a>
       </p>
       <p>
         <span class="context">github</span>
