--- a/_layouts/chat.html
+++ b/_layouts/chat.html
@@ -12,7 +12,7 @@ layout: default
 
 {% if page.url != '/' %}
     <p class="date">
-        {% if page.date %}Published {{ page.date | date: "%Y-%m-%d" }}{% endif %}
+        {% if page.date %}Chat archived {{ page.date | date: "%Y-%m-%d" }}{% endif %}
         on <a href="/">mkgll.com</a>
         <span class="hidden-xs">
           &mdash;
