--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -57,10 +57,10 @@
       <a href="/backers">Click here</a> for information about donating to
       support my work.
     </p>
-    <h3>Wayland Book</h3>
+    <h3>Privacy Book</h3>
     <p>
       Check out
-      <a href="https://wayland-book.com">The Wayland Protocol</a>.
+      <a href="https://wayland-book.com">Digital Privacy</a>.
     </p>
     <h3>Make your own blog!</h3>
     <!--
