--- a/_includes/blog-stub.html
+++ b/_includes/blog-stub.html
@@ -2,7 +2,7 @@
 {% assign documents = site.documents | sort: 'date' | reverse %}
 
 {% for document in documents limit:500 %}
-  {% if document.layout = 'post' %}
+  {% if document.layout == 'post' %}
 <div class="post-stub">
        <h2>
       <span class="date hidden-xs">{{ document.date | date: "%Y-%m-%d" }}    </span>
