--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -28,8 +28,8 @@
     display: inline;
     margin-left: 5px;
     margin-right: 5px;
-"><a href="{{ '/contact' | relative_url }}" style="
+"><a href="{{ '/more' | relative_url }}" style="
     color: #444;
-">Contact</a></li>
+">More</a></li>
   </ul>
 
