--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
     <hr class="visible-xs" />
     <img class="avatar" src="/drw/assets/img/avatar-lego-alt.jpg" alt="mkgll avatar" />
-    <p>I write software. Occasionally, I will compose a post for this blog.   <a href="{{ '/about' | relative_url }}">More.</a> <a href="{{ '/now' | relative_url }}">Now.</a></p>
+    <p>I write software. Occasionally, I will compose a post for this blog.   <a href="{{ '/about' | relative_url }}">About.</a> <a href="{{ '/now' | relative_url }}">Now.</a> <a href="{{ '/blogroll' | relative_url }}">Blogroll.</a></p>
     <div class="external-links">
       <p>
         <span class="context">twitter</span>
