--- a/_layouts/reply.html
+++ b/_layouts/reply.html
@@ -5,7 +5,7 @@ layout: default
 
 <article>
     {% if page.reply %}
- <p><span class="reply-context" style="display:block;background-color: #f5f5f5;text-indent: 1em;">↳ In reply to <a href="{{ page.reply | relative_url }}" class="u-in-reply-to h-cite">{{ page.reply }}</a></span></p>
+ <p><span class="reply-context" style="word-break: break-all;display:block;background-color: #f5f5f5;text-indent: 1em;">↳ In reply to <a href="{{ page.reply | relative_url }}" class="u-in-reply-to h-cite">{{ page.reply }}</a></span></p>
   {% endif %}
  
     {% if page.blockquote %}
