--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -8,7 +8,7 @@ layout: default
      {% if page.url != '/' %}
     <p class="date">
         {% if page.date %}Published {{ page.date | date: "%Y-%m-%d" }}{% endif %}
-        on <a href="/">Deryk Makgill's website</a>
+        on <a href="/">mkgll.com</a>
         <span class="hidden-xs">
           &mdash;
           <a href="{{ page.url }}">
