--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,12 +24,6 @@
     margin-right: 5px;
 "><a href="{{ '/microblog' | relative_url }}" style="
     color: #444;
-">Microblog</a></li><li style="
-    display: inline;
-    margin-left: 5px;
-    margin-right: 5px;
-"><a href="{{ '/more' | relative_url }}" style="
-    color: #444;
-">More</a></li>
+">Microblog</a></li>
   </ul>
 
