--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
     <hr class="visible-xs" />
     <img class="avatar" src="/assets/img/avatar-mkgll-blacktron.jpg" alt="mkgll avatar" />
-    <p>I write, research and invest. This is my blog. <a href="{{ '/about' | relative_url }}">About.</a> <a href="{{ '/now' | relative_url }}">Now.</a> <a href="{{ '/blogroll' | relative_url }}">Blogroll.</a></p>
+    <p>I write, research and invest. This is my blog. <a href="{{ '/about' | relative_url }}">About.</a> <a href="{{ '/site' | relative_url }}">Site.</a> <a href="{{ '/blogroll' | relative_url }}">Blogroll.</a></p>
     <div class="external-links">
       <p>
         <span class="context">twitter</span>
