--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -69,8 +69,15 @@
     <p>
       I offered a reward for readers to start their own blogs,
       <a href="/make-a-blog">read about them here</a>.
+    </p><!--
+    <h3>License</h3>
+    <p style="font-size: 10pt">
+    The content for this site is
+    <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>.
+    The <a href="https://git.sr.ht/~sircmpwn/drewdevault.com">code</a> for this site is
+    <a href="https://opensource.org/licenses/MIT">MIT</a>.
     </p>
-   
+    <small class="text-muted">Have you seen <a href="https://sourcehut.org">sourcehut</a>?</small> -->
     <div class="spacer" style="margin-top: 50px;"></div>
 </div>
 
