--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -54,11 +54,11 @@
       <a href="/backers">Click here</a> for information about donating to
       support my work.
     </p>
-    <h3>Privacy Book</h3>
+        <!--<h3>Privacy Book</h3>
     <p>
       Check out
       <a href="https://wayland-book.com">Digital Privacy</a>.
-    </p>
+    </p>    -->
     <h3>Make your own blog!</h3>
     <!--
     <p>
