--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -20,7 +20,7 @@
     </div>
     
   <div class="welovecodinghorror" style="margin-bottom:15px;background: #f2e0b0;padding: 5px;margin-left: -5px;margin-right: -5px;"> 
-[ad] Enjoy my work? Subscribing on <b><a href="https://www.amazon.com/dp/B008HUMTO0/?tag=codihorr-20">Patreon</a></b> or sending some <b><a href="https://www.amazon.com/dp/B00BU3KPQU/?tag=codihorr-20">Bitcoin/a></b> helps me know best what you want more of!
+[ad] Enjoy my work? Subscribing on <b><a href="https://www.amazon.com/dp/B008HUMTO0/?tag=codihorr-20">Patreon</a></b> or sending some <b><a href="https://www.amazon.com/dp/B00BU3KPQU/?tag=codihorr-20">Bitcoin</a></b> helps me know best what you want more of!
 </div>
     
      {% if page.url != '/' %}
