--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ layout: default
     <p class="date">
         {% if page.date %}Published {{ page.date | date: "%Y-%m-%d" }}{% endif %}
         on <a href="/">mkgll.com</a>
-        <span class="hidden-xs">
+    <span class="hidden-xs" style="display: none;">
           &mdash;
           <a href="{{ page.url }}">
             Permalink
