--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -59,14 +59,14 @@
       Check out
       <a href="https://wayland-book.com">Digital Privacy</a>.
     </p>    -->
-    <h3>Make your own blog!</h3>
+   <!-- <h3>Make your own blog!</h3>
     <!--
     <p>
       Make your own blog and write your first article and
       <a href="/make-a-blog">I'll give you $20</a>.
     </p>
     -->
-    <p>
+  <!--  <p>
       I offered a reward for readers to start their own blogs,
       <a href="/make-a-blog">read about them here</a>.
     </p><!--
