--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -49,7 +49,7 @@
       <a href="https://sourcehut.org/consultancy/">Click here</a> to learn
       about my consulting services.
     </p>
-    <h3>Donate</h3>
+   <!-- <h3>Donate</h3>
     <p>
       <a href="/backers">Click here</a> for information about donating to
       support my work.
