--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -44,7 +44,7 @@
       {% endif %} -->
 
     
-    <h3>Consulting</h3>
+   <!--  <h3>Consulting</h3>
     <p>
       <a href="https://sourcehut.org/consultancy/">Click here</a> to learn
       about my consulting services.
